--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pybind11"]
 	path = pybind11
 	url = https://github.com/pybind/pybind11
+[submodule "Source/voice-leading-cmdline"]
+	path = Source/voice-leading-cmdline
+	url = https://github.com/aiden-tepper/voice-leading-cmdline
